Make suspectCurrent assertion not fire constantly after we Fault.  b=386664  r+sr=peterv